Closed
Bug 137632
Opened 24 years ago
Closed 24 years ago
Back/forward does not scroll to exact same location with XML files, and does not select target if pref set
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: hjtoi-bugzilla, Assigned: hjtoi-bugzilla)
References
()
Details
(Keywords: regression, Whiteboard: [adt2])
Attachments
(1 file)
|
887 bytes,
patch
|
jst
:
review+
jst
:
superreview+
jesup
:
approval+
|
Details | Diff | Splinter Review |
1. Go to URL, notice that "Self emplyment tax" is the first thing visible.
2. Go to some other url, hit Back button
Expected results: to scroll to the exact same location (and select target if
"layout.selectanchor" pref set)
Actual results: the scroll does not happen to the same location. On my screen we
scroll so that above the expected result the first thing we show is "in
Publication 535.". Additional issue is that if you have set the pref
"layout.selectanchor" you should get the anchor selected when you come back.
That does not happen. See PresShell::GoToAnchor() what it does when you follow
the anchor normally.
These things are regressions from bug bug 59774, which broke back/forward
completely for XML. The fix for bug 136788 gets us to the current situation.
| Assignee | ||
Updated•24 years ago
|
Keywords: regression
| Assignee | ||
Updated•24 years ago
|
| Assignee | ||
Comment 1•24 years ago
|
||
This seems to give me the old behavior. Is this safe? I would think so, we
might just try to scroll from history and sink, but that is only a slight perf
hit that I am willing to take for correct XML functionality. I would rather
take this than wait for months for a better fix. Radha?
Comment 2•24 years ago
|
||
Heikki, I see what you are saying. I would suggest that you go ahead with this
proposed patch, if you think this needs to be taken care for mach V.I need to
look into PresShell and understand this pref too, before I can propose a right
fix and it is not my priority right now. Thanks.
| Assignee | ||
Comment 3•24 years ago
|
||
So r=radha, please ;) ?
Comment 4•24 years ago
|
||
r=radha. (presuming you have tested the patch with/without the appropriate prefs
and other scenarios.) The patch simply backs out the erroneous code that was
causing the regression.
Comment 5•24 years ago
|
||
Comment on attachment 79352 [details] [diff] [review]
Proposed fix: do as we always did
sr=jst
Attachment #79352 -
Flags: superreview+
Attachment #79352 -
Flags: review+
| Assignee | ||
Comment 6•24 years ago
|
||
Fixed on the trunk, and taking. I'll file a new bug on scroll position not
working properly with XML, and refer to this bug as well.
Mailing drivers.
This bug and bug 136788 should be considered together by ADT & drivers. We are
effectively backing out bug 59774 for XML cases.
Comment 7•24 years ago
|
||
Claduis - Can you verify that this has been fixed on the trunk and caused no
new, known regressions? thanks!
Whiteboard: [fixed on trunk] → [fixed on trunk] [ETA 04/19] [adt2]
Comment 8•24 years ago
|
||
Resolving as fixed, because the fix has landed on the trunk. Pls change to
verified, when the fix has been verified, with no regressions.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 9•24 years ago
|
||
VERIFIED Fixed on trunk builds 2002041803, marking as such
Status: RESOLVED → VERIFIED
Comment 10•24 years ago
|
||
adt1.0.0+ (on ADT's behalf) approval for checking into the 1.0 branch. Pls check
this in today, then add the fixed1.0.0 keyword.
Comment 11•24 years ago
|
||
Comment on attachment 79352 [details] [diff] [review]
Proposed fix: do as we always did
a=rjesup@wgate.com for branch checkin
Attachment #79352 -
Flags: approval+
| Assignee | ||
Comment 12•24 years ago
|
||
Checked in on branch as well.
Keywords: adt1.0.0+ → fixed1.0.0
Whiteboard: [fixed on trunk] [ETA 04/19] [adt2] → [adt2]
Comment 13•23 years ago
|
||
VERIFIED Fixed on the branch with 20020424 builds. wrote bug 140455 to address
smaller issue discovered while testing.
Keywords: fixed1.0.0 → verified1.0.0
Comment 14•23 years ago
|
||
*** Bug 137847 has been marked as a duplicate of this bug. ***
Component: History: Session → Document Navigation
QA Contact: claudius → docshell
You need to log in
before you can comment on or make changes to this bug.
Description
•