Bug 137632, effectively back out bug 59774 for XML. Going back/forward in history positions us correctly with anchors again. r=radha, sr=jst.